--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -13,6 +13,10 @@
 			grid-template-columns: repeat(2, 1fr);
 			gap: 1.5rem;
 
+			@media (max-width: 1600px) {
+				grid-template-columns: 1fr;
+			}
+
 			li {
 				background: var(--white);
 				border: 1px solid var(--gray-100);
