--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -26,7 +26,7 @@
 	footer {
 		align-self: stretch;
 
-		&.empty {
+		&.empty .progress {
 			opacity: 0.5;
 		}
 	}
@@ -132,6 +132,16 @@
 
 		&:disabled {
 			cursor: default;
+			opacity: 0.6;
+		}
+
+		&.isActive {
+			filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
+		}
+
+		&.isactive:hover {
+			filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg)
+				brightness(0.6);
 		}
 	}
 }
